# neural-drift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
neuraldrift/: __init__.py  banners.py  brain.py  brain_constants.py  helpers.py  human_brain.py  output.py  scroll.py  session.py  startup.py  welcome.py
neuraldrift/console/: __init__.py  __main__.py  app.py  client.py  commands.py  input.py  layout.py  player_bridge.py
neuraldrift/console/panels/: __init__.py  agents.py  brain.py  events.py  header.py  player.py
neuraldrift/server/: __init__.py  __main__.py  daemon.py  protocol.py  wrappers.py
neuraldrift/tools/: brain_dashboard.py
snapshots/: oracle_lv57_2026-03-01.json
tests/: conftest.py  test_brain.py  test_helpers.py  test_human_brain.py  test_session.py
