[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuraldrift"
version = "1.0.0"
description = "Dual-knowledge system where knowledge has temperature"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["rich>=10.0"]
authors = [
    {name = "KHET-1"},
]
keywords = ["knowledge", "brain", "ai", "memory", "agents", "xp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/KHET-1/neural-drift"
Repository = "https://github.com/KHET-1/neural-drift"
Issues = "https://github.com/KHET-1/neural-drift/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["neuraldrift*"]
